Changes to navbar, and some spacing fixes

--- a/docs/_sass/components/_navbar.scss
+++ b/docs/_sass/components/_navbar.scss
@@ -66,7 +66,7 @@
     .navbar-nav {
       .nav-item {
         .nav-link {
-          padding: 1.1em 1em;
+          padding: .8em 1em;
           padding-left: 1.5em;
         }
       }
